--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header -->
     <div class="header">
-        <h1>Expressive Echoes</h1>
+        <h1>PerformerPath</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="programlist.html">Program List</a>
