--- a/public/music.html
+++ b/public/music.html
@@ -18,7 +18,7 @@
   <div class="profession-container">
     <div class="profession">
       <h2>Singer</h2>
-      <a href="#">Workshop</a>
+      <a href="workshop.html">Workshop</a>
       <a href="#">Audition</a>
       <a href="#">Job Vacancy</a>
       <a href="#">Courses</a>
