--- a/public/workshop.html
+++ b/public/workshop.html
@@ -6,6 +6,16 @@ html lang="en">
   <link rel="stylesheet" href="workshop.css">
 </head>
 <body>
+    <div class="header">
+        <img src="C:\Users\Aaliya\Downloads.jpg" alt="PerformerPath Logo">
+        <h1>workshop</h1>
+        
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="programlist.html">Program List</a>
+            <a href="#">Premium</a>
+        </nav>
+    </div>
   <div class="workshops-container">
     <div class="workshop">
       <h2>Workshop 1: Guitar Basics</h2>
