--- a/public/filmmaking.html
+++ b/public/filmmaking.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Singing Professions</title>
+  <title>film making Professions</title>
   <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <h1>PerformerPath</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="dashboard.html">Program List</a>
+            <a href="programlist.html">Program List</a>
             <a href="#">Premium</a>
         </nav>
     </div>
@@ -20,7 +20,7 @@
       <h2>Singer</h2>
       <a href="courses.html">Courses</a>
       <a href="workshop.html">Workshop</a>
-      <a href="audition.html">Audition</a>
+      <a href="#">Audition</a>
       <a href="musicjob1.html">Job Vacancy</a>
       
       
