--- a/public/workshop.html
+++ b/public/workshop.html
@@ -7,7 +7,7 @@ html lang="en">
 </head>
 <body>
     <div class="header">
-        <img src="C:\Users\Aaliya\Downloads.jpg" alt="PerformerPath Logo">
+        <img src="abc.jpeg" alt="PerformerPath Logo" width="50" height="50">
         <h1>workshop</h1>
         
         <nav>
